syntax = "proto3";

package onight.zjfae.afront.gensazj;
option java_outer_classname="UrlParams";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_urlparams{
	//
	message listMore{
		string iconImg = 1;	 //,小图标,String,不校验,是,
		string listName = 2;	 //,图标名称,String,不校验,是,
		string backendUrl = 3;	 //,跳转链接,String,不校验,是,
		string keyWord = 4;	 //,内部跳转链接,String,不校验,是,
		string isShare = 5;//,是否分享,String,不校验,是
		
	}


	repeated listMore list = 1;


}

message Ret_PBAPP_urlparams{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_urlparams data=3;


}

message REQ_PBAPP_urlparams{
	//

	
}